force-app/main/default/objects/ChannelResponse__c/ChannelResponse__c.object-meta.xml
<CustomObject>
    <label>Channel Response</label>
    <nameField>
        <displayFormat>CR-{0000000000}</displayFormat>
        <label>Channel Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>