force-app/main/default/objects/ChannelResponse__c/fields/AbandonedCart__c.field-meta.xml
<CustomField>
    <fullName>AbandonedCart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abandoned Cart</label>
    <type>Checkbox</type>
</CustomField>