force-app/main/default/objects/ChannelResponse__c/fields/AbbottMallUserID__c.field-meta.xml
<CustomField>
    <fullName>AbbottMallUserID__c</fullName>
    <externalId>true</externalId>
    <label>AbbottMall User ID</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>