force-app/main/default/objects/ChannelResponse__c/fields/AfterBirthCareCenter__c.field-meta.xml
<CustomField>
    <fullName>AfterBirthCareCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>After Birth Care Center</label>
    <referenceTo>Institution__c</referenceTo>
    <relationshipLabel>Channel Responses</relationshipLabel>
    <relationshipName>Channel_Responses_ABCC</relationshipName>
    <type>Lookup</type>
</CustomField>