force-app/main/default/objects/ChannelResponse__c/fields/are_you_pregnant__c.field-meta.xml
<CustomField>
    <fullName>are_you_pregnant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are You Pregnant</label>
    <type>Checkbox</type>
</CustomField>