force-app/main/default/objects/ChannelResponse__c/fields/BirthHospital__c.field-meta.xml
<CustomField>
    <fullName>BirthHospital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Birth Hospital</label>
    <referenceTo>Institution__c</referenceTo>
    <relationshipLabel>Channel Responses (Birth Hospital)</relationshipLabel>
    <relationshipName>Channel_Responses_BH</relationshipName>
    <type>Lookup</type>
</CustomField>