force-app/main/default/objects/ChannelResponse__c/fields/Bought_Pediasure_before_after_campaign__c.field-meta.xml
<CustomField>
    <fullName>Bought_Pediasure_before_after_campaign__c</fullName>
    <label>Bought Pediasure before/after campaign?</label>
    <type>TextArea</type>
</CustomField>