force-app/main/default/objects/ChannelResponse__c/fields/BR_Last_Status__c.field-meta.xml
<CustomField>
    <fullName>BR_Last_Status__c</fullName>
    <label>BR Last Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>