force-app/main/default/objects/ChannelResponse__c/fields/BR_last_Type__c.field-meta.xml
<CustomField>
    <fullName>BR_last_Type__c</fullName>
    <label>BR last Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>