force-app/main/default/objects/ChannelResponse__c/fields/BR_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>BR_Last_Updated_Date__c</fullName>
    <label>BR Last Updated Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>