force-app/main/default/objects/ChannelResponse__c/fields/BrandRelationship__c.field-meta.xml
<CustomField>
    <fullName>BrandRelationship__c</fullName>
    <label>Brand Relationship</label>
    <referenceTo>BrandRelationship__c</referenceTo>
    <relationshipLabel>Channel Responses</relationshipLabel>
    <relationshipName>Channel_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>