force-app/main/default/objects/ChannelResponse__c/fields/BuyingFor__c.field-meta.xml
<CustomField>
    <fullName>BuyingFor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BuyingFor</label>
    <referenceTo>Survey_IN__c</referenceTo>
    <relationshipLabel>Channel Responses</relationshipLabel>
    <relationshipName>Channel_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>