force-app/main/default/objects/ChannelResponse__c/fields/CampaignText__c.field-meta.xml
<CustomField>
    <fullName>CampaignText__c</fullName>
    <label>Campaign</label>
    <type>TextArea</type>
</CustomField>