force-app/main/default/objects/ChannelResponse__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>TEXT( Channel__r.Category__c )</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>