force-app/main/default/objects/ChannelResponse__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Channel</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Channel Responses</relationshipLabel>
    <relationshipName>Channel_Responses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>