force-app/main/default/objects/ChannelResponse__c/fields/Child_Food_Intake__c.field-meta.xml
<CustomField>
    <fullName>Child_Food_Intake__c</fullName>
    <label>Child Food Intake</label>
    <length>255</length>
    <type>Text</type>
</CustomField>