force-app/main/default/objects/ChannelResponse__c/fields/Child_Food_Picky__c.field-meta.xml
<CustomField>
    <fullName>Child_Food_Picky__c</fullName>
    <label>Child Food Picky</label>
    <length>255</length>
    <type>Text</type>
</CustomField>