force-app/main/default/objects/ChannelResponse__c/fields/Child_Food_Preference__c.field-meta.xml
<CustomField>
    <fullName>Child_Food_Preference__c</fullName>
    <label>Child Food Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>