force-app/main/default/objects/ChannelResponse__c/fields/Child_No_Veg__c.field-meta.xml
<CustomField>
    <fullName>Child_No_Veg__c</fullName>
    <label>Child No Veg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>