force-app/main/default/objects/ChannelResponse__c/fields/Child_Play_With_Food__c.field-meta.xml
<CustomField>
    <fullName>Child_Play_With_Food__c</fullName>
    <label>Child Play With Food</label>
    <length>255</length>
    <type>Text</type>
</CustomField>