force-app/main/default/objects/ChannelResponse__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Registration</fullName>
            </value>
            <value>
                <fullName>Previous Registration - Same Brand</fullName>
            </value>
            <value>
                <fullName>Previous Registration - Different Brand</fullName>
                <isActive>false</isActive>
                <label>Previous Registration - Different Brand</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>