force-app/main/default/objects/ChannelResponse__c/fields/ConsentForm__c.field-meta.xml
<CustomField>
    <fullName>ConsentForm__c</fullName>
    <label>Consent Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>