force-app/main/default/objects/ChannelResponse__c/fields/ConsentForm_Image__c.field-meta.xml
<CustomField>
    <fullName>ConsentForm_Image__c</fullName>
    <formula>IF(
    ISPICKVAL(Contact__r.Account.Market__c, &quot;IN&quot;),
    IMAGE(&quot;https://res.cloudinary.com/hadgrcy1u/image/upload/&quot; + ConsentForm__c, &quot;&quot;),
    &quot;&quot;
)</formula>
    <label>Consent Form</label>
    <type>Text</type>
</CustomField>