force-app/main/default/objects/ChannelResponse__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <type>TextArea</type>
</CustomField>