force-app/main/default/objects/ChannelResponse__c/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coupon</label>
    <referenceTo>Coupon__c</referenceTo>
    <relationshipLabel>Channel Responses</relationshipLabel>
    <relationshipName>Channel_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>