force-app/main/default/objects/ChannelResponse__c/fields/Coupon_Type__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Type__c</fullName>
    <formula>Coupon__r.Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coupon Type</label>
    <type>Text</type>
</CustomField>