force-app/main/default/objects/ChannelResponse__c/fields/CreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateTime__c</fullName>
    <formula>CreatedDate</formula>
    <label>Created Date/Time</label>
    <type>DateTime</type>
</CustomField>