force-app/main/default/objects/ChannelResponse__c/fields/Customer_received_sample_gimmick_kit__c.field-meta.xml
<CustomField>
    <fullName>Customer_received_sample_gimmick_kit__c</fullName>
    <label>Customer received sample/gimmick/kit?</label>
    <type>TextArea</type>
</CustomField>