force-app/main/default/objects/ChannelResponse__c/fields/CustomerRelationship__c.field-meta.xml
<CustomField>
    <fullName>CustomerRelationship__c</fullName>
    <label>Customer Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relative</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Colleague</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Friends and Family</fullName>
            </value>
            <value>
                <fullName>Myself and Friends and Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>