force-app/main/default/objects/ChannelResponse__c/fields/CustomerSpeciality__c.field-meta.xml
<CustomField>
    <fullName>CustomerSpeciality__c</fullName>
    <label>Customer Speciality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>