force-app/main/default/objects/ChannelResponse__c/fields/DeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Channel Responses</relationshipLabel>
    <relationshipName>ChannelResponses</relationshipName>
    <type>Lookup</type>
</CustomField>