force-app/main/default/objects/ChannelResponse__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>[22-Sep-21 Khai] For Dynamics Migration purpose.</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>