force-app/main/default/objects/ChannelResponse__c/fields/DiceEcardStatus__c.field-meta.xml
<CustomField>
    <fullName>DiceEcardStatus__c</fullName>
    <description>Status that being returned once Dice e-card creation API triggered</description>
    <label>DiceECardStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Failed-BrandError</fullName>
            </value>
            <value>
                <fullName>Failed-LimitExceeded</fullName>
            </value>
            <value>
                <fullName>Failed-ECardsNotAvailable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>