force-app/main/default/objects/ChannelResponse__c/fields/Discount_Card__c.field-meta.xml
<CustomField>
    <fullName>Discount_Card__c</fullName>
    <label>Discount Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>