force-app/main/default/objects/ChannelResponse__c/fields/Doctor_Name__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Name__c</fullName>
    <formula>DoctorHCP__r.PartnerName__c</formula>
    <label>Doctor Name</label>
    <type>Text</type>
</CustomField>