force-app/main/default/objects/ChannelResponse__c/fields/DoctorHCP__c.field-meta.xml
<CustomField>
    <fullName>DoctorHCP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor/HCP</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value should be with record type Doctor/HCP</errorMessage>
        <filterItems>
            <field>AbbottPartner__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Doctor/HCP</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AbbottPartner__c</referenceTo>
    <relationshipLabel>Channel Responses (Doctor/HCP)</relationshipLabel>
    <relationshipName>Channel_Responses1</relationshipName>
    <type>Lookup</type>
</CustomField>