force-app/main/default/objects/ChannelResponse__c/fields/DrugStoreRedemptionChoice__c.field-meta.xml
<CustomField>
    <fullName>DrugStoreRedemptionChoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drug Store Redemption Choice</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Affiliate_Value__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Trade</value>
        </filterItems>
        <filterItems>
            <field>Affiliate_Value__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Affiliate_Value__c</referenceTo>
    <relationshipLabel>Channel Responses</relationshipLabel>
    <relationshipName>Channel_Responses_DS</relationshipName>
    <type>Lookup</type>
</CustomField>