force-app/main/default/objects/ChannelResponse__c/fields/EndOfAlwaysOnJourney__c.field-meta.xml
<CustomField>
    <fullName>EndOfAlwaysOnJourney__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End of Always On Journey</label>
    <type>Checkbox</type>
</CustomField>