force-app/main/default/objects/ChannelResponse__c/fields/EnrolledBy__c.field-meta.xml
<CustomField>
    <fullName>EnrolledBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrolled By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AbbottPartner__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dietician</value>
        </filterItems>
        <filterItems>
            <field>AbbottPartner__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AbbottPartner__c</referenceTo>
    <relationshipLabel>Channel Responses (Enrolled By)</relationshipLabel>
    <relationshipName>Channel_Responses_EB</relationshipName>
    <type>Lookup</type>
</CustomField>