force-app/main/default/objects/ChannelResponse__c/fields/ExternalAppId__c.field-meta.xml
<CustomField>
    <fullName>ExternalAppId__c</fullName>
    <externalId>true</externalId>
    <label>External App Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>