force-app/main/default/objects/ChannelResponse__c/fields/ExternalCampaignReference__c.field-meta.xml
<CustomField>
    <fullName>ExternalCampaignReference__c</fullName>
    <formula>Campaign__r.ExternalCampaignReference__c</formula>
    <label>External Campaign Reference</label>
    <type>Text</type>
</CustomField>