force-app/main/default/objects/ChannelResponse__c/fields/Field_Dietician_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Dietician_Name__c</fullName>
    <formula>FieldDietician__r.PartnerName__c</formula>
    <label>Field Dietician Name</label>
    <type>Text</type>
</CustomField>