force-app/main/default/objects/ChannelResponse__c/fields/FieldDietician__c.field-meta.xml
<CustomField>
    <fullName>FieldDietician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Dietician</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value should be with record type Dietician</errorMessage>
        <filterItems>
            <field>AbbottPartner__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dietician, Nutritional Advisor / Promoter</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AbbottPartner__c</referenceTo>
    <relationshipLabel>Channel Responses</relationshipLabel>
    <relationshipName>Channel_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>