force-app/main/default/objects/ChannelResponse__c/fields/GADEVICE__c.field-meta.xml
<CustomField>
    <fullName>GADEVICE__c</fullName>
    <label>GADEVICE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>