force-app/main/default/objects/ChannelResponse__c/fields/GAGEONETWORK__c.field-meta.xml
<CustomField>
    <fullName>GAGEONETWORK__c</fullName>
    <label>GAGEONETWORK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>