force-app/main/default/objects/ChannelResponse__c/fields/Game_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Game_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Game Cancelled</label>
    <type>Checkbox</type>
</CustomField>