force-app/main/default/objects/ChannelResponse__c/fields/GATRACKID__c.field-meta.xml
<CustomField>
    <fullName>GATRACKID__c</fullName>
    <label>GATRACKID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>