force-app/main/default/objects/ChannelResponse__c/fields/GrowthGuideAppSubmitted__c.field-meta.xml
<CustomField>
    <fullName>GrowthGuideAppSubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Growth Guide App Submitted</label>
    <type>Checkbox</type>
</CustomField>