force-app/main/default/objects/ChannelResponse__c/fields/Have_you_taken_PediaSure__c.field-meta.xml
<CustomField>
    <fullName>Have_you_taken_PediaSure__c</fullName>
    <label>Have you taken PediaSure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>