force-app/main/default/objects/ChannelResponse__c/fields/HavePurchasedWithin6Months__c.field-meta.xml
<CustomField>
    <fullName>HavePurchasedWithin6Months__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Purchased Within 6 Months</label>
    <type>Checkbox</type>
</CustomField>