force-app/main/default/objects/ChannelResponse__c/fields/HCPClassification__c.field-meta.xml
<CustomField>
    <fullName>HCPClassification__c</fullName>
    <label>HCP Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>