force-app/main/default/objects/ChannelResponse__c/fields/HCPName__c.field-meta.xml
<CustomField>
    <fullName>HCPName__c</fullName>
    <label>HCP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>