force-app/main/default/objects/ChannelResponse__c/fields/Hopar_ID__c.field-meta.xml
<CustomField>
    <fullName>Hopar_ID__c</fullName>
    <externalId>true</externalId>
    <label>Hopar ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>