force-app/main/default/objects/ChannelResponse__c/fields/Hospital_Name__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To store Hospital name under channel response</description>
    <label>Hospital Name</label>
    <referenceTo>Institution__c</referenceTo>
    <relationshipLabel>Hospital Name</relationshipLabel>
    <relationshipName>Channel_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>