force-app/main/default/objects/ChannelResponse__c/fields/IOS_Nutritional_Report__c.field-meta.xml
<CustomField>
    <fullName>IOS_Nutritional_Report__c</fullName>
    <formula>IF(
    ISPICKVAL(BrandRelationship__r.PrimaryContact__r.Account.Market__c,&quot;IN&quot;),
    HYPERLINK(&quot;http://dashboard.pediasuregrowthguide.com/dashboard/report/growthReport.htm?_session=&quot; +  ExternalAppId__c, &quot;Open Growth Guide&quot;, &quot;_blank&quot;),
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IOS Nutritional Report</label>
    <type>Text</type>
</CustomField>