force-app/main/default/objects/ChannelResponse__c/fields/is_Consumer__c.field-meta.xml
<CustomField>
    <fullName>is_Consumer__c</fullName>
    <formula>OR(Channel__r.Name == &apos;Web&apos;,Channel__r.Name == &apos;Consumer-Partner&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Consumer</label>
    <type>Checkbox</type>
</CustomField>