force-app/main/default/objects/ChannelResponse__c/fields/is_HENS__c.field-meta.xml
<CustomField>
    <fullName>is_HENS__c</fullName>
    <formula>Channel__r.Name == &apos;HENS&apos;</formula>
    <label>is HENS</label>
    <type>Checkbox</type>
</CustomField>