force-app/main/default/objects/ChannelResponse__c/fields/is_StaffShop__c.field-meta.xml
<CustomField>
    <fullName>is_StaffShop__c</fullName>
    <formula>Channel__r.Name == &apos;Staff Shop&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is StaffShop</label>
    <type>Checkbox</type>
</CustomField>