force-app/main/default/objects/ChannelResponse__c/fields/IsSample_Requested__c.field-meta.xml
<CustomField>
    <fullName>IsSample_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Requested</label>
    <type>Checkbox</type>
</CustomField>