force-app/main/default/objects/ChannelResponse__c/fields/ItemTypeRequested__c.field-meta.xml
<CustomField>
    <fullName>ItemTypeRequested__c</fullName>
    <label>Item Type Requested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>