force-app/main/default/objects/ChannelResponse__c/fields/Lead_Status_CR__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_CR__c</fullName>
    <label>Lead Status CR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>