force-app/main/default/objects/ChannelResponse__c/fields/LocationID__c.field-meta.xml
<CustomField>
    <fullName>LocationID__c</fullName>
    <formula>Channel__r.LocationID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location ID</label>
    <type>Text</type>
</CustomField>