force-app/main/default/objects/ChannelResponse__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>[1-Sep-21 Khai] This field is for troubleshooting by extracting out the market of the Contact</description>
    <formula>Contact__r.Market__c</formula>
    <label>Market</label>
    <type>Text</type>
</CustomField>