force-app/main/default/objects/ChannelResponse__c/fields/MC_Sync_Eligibility_MY__c.field-meta.xml
<CustomField>
    <fullName>MC_Sync_Eligibility_MY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC Sync Eligibility MY</label>
    <type>Checkbox</type>
</CustomField>