force-app/main/default/objects/ChannelResponse__c/fields/MC_VN_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_VN_Sync_Eligibility__c</fullName>
    <formula>MC_Sync_Eligibility_VN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC VN Sync Eligibility</label>
    <type>Checkbox</type>
</CustomField>