force-app/main/default/objects/ChannelResponse__c/fields/MedicalRepresentative__c.field-meta.xml
<CustomField>
    <fullName>MedicalRepresentative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medical Representative</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value should be with record type Medical Representative</errorMessage>
        <filterItems>
            <field>AbbottPartner__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Medical Representative</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AbbottPartner__c</referenceTo>
    <relationshipLabel>Channel Responses (Medical Representative)</relationshipLabel>
    <relationshipName>Channel_Responses2</relationshipName>
    <type>Lookup</type>
</CustomField>