force-app/main/default/objects/ChannelResponse__c/fields/Medium__c.field-meta.xml
<CustomField>
    <fullName>Medium__c</fullName>
    <label>Medium</label>
    <type>TextArea</type>
</CustomField>