force-app/main/default/objects/ChannelResponse__c/fields/Month_Registered__c.field-meta.xml
<CustomField>
    <fullName>Month_Registered__c</fullName>
    <formula>IF(MONTH(DATEVALUE(RegistrationDate__c)) = 1,
&quot;January&quot;,
IF(MONTH(DATEVALUE(RegistrationDate__c)) = 2,
&quot;February&quot;,
IF(MONTH(DATEVALUE(RegistrationDate__c)) = 3,
&quot;March&quot;,
IF(MONTH(DATEVALUE(RegistrationDate__c)) = 4,
&quot;April&quot;,
IF(MONTH(DATEVALUE(RegistrationDate__c)) = 5,
&quot;May&quot;,
IF(MONTH(DATEVALUE(RegistrationDate__c)) = 6,
&quot;June&quot;,
IF(MONTH(DATEVALUE(RegistrationDate__c)) = 7,
&quot;July&quot;,
IF(MONTH(DATEVALUE(RegistrationDate__c)) = 8,
&quot;August&quot;,
IF(MONTH(DATEVALUE(RegistrationDate__c)) = 9,
&quot;September&quot;,
IF(MONTH(DATEVALUE(RegistrationDate__c)) = 10,
&quot;October&quot;,
IF(MONTH(DATEVALUE(RegistrationDate__c)) = 11,
&quot;November&quot;,
&quot;December&quot;)))))))))))</formula>
    <label>Month Registered</label>
    <type>Text</type>
</CustomField>