force-app/main/default/objects/ChannelResponse__c/fields/NA_Nutritional_Report__c.field-meta.xml
<CustomField>
    <fullName>NA_Nutritional_Report__c</fullName>
    <formula>IF(
ISPICKVAL(BrandRelationship__r.PrimaryContact__r.Account.Market__c,&quot;IN&quot;),
HYPERLINK(&quot; http://dashboard.pediasuregrowthguide.com/dashboard/report/growthReports.htm?_session=&quot; + ExternalAppId__c, &quot;Open Growth Guide&quot;, &quot;_blank&quot;),
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NA Nutritional Report</label>
    <type>Text</type>
</CustomField>