force-app/main/default/objects/ChannelResponse__c/fields/Non_HDS_Reason__c.field-meta.xml
<CustomField>
    <fullName>Non_HDS_Reason__c</fullName>
    <label>Non HDS Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available stock</fullName>
            </value>
            <value>
                <fullName>Expensive product</fullName>
            </value>
            <value>
                <fullName>Can&apos;t mix variant</fullName>
            </value>
            <value>
                <fullName>Small consumption</fullName>
            </value>
            <value>
                <fullName>Alternating consumption</fullName>
            </value>
            <value>
                <fullName>Expensive shipping</fullName>
            </value>
            <value>
                <fullName>No gimmick</fullName>
            </value>
            <value>
                <fullName>Buy on the monthly shopping</fullName>
            </value>
            <value>
                <fullName>Buy when strolling around the Mall</fullName>
            </value>
            <value>
                <fullName>Credit card payment preference</fullName>
            </value>
            <value>
                <fullName>Buy at the store because it&apos;s close to home</fullName>
            </value>
            <value>
                <fullName>Order with PG (PG can deliver to home)</fullName>
            </value>
            <value>
                <fullName>Not interested gimmick/already have</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>