force-app/main/default/objects/ChannelResponse__c/fields/NonDeliveryRedemptionDate__c.field-meta.xml
<CustomField>
    <fullName>NonDeliveryRedemptionDate__c</fullName>
    <label>Non Delivery Redemption Date</label>
    <type>DateTime</type>
</CustomField>