force-app/main/default/objects/ChannelResponse__c/fields/NonDeliveryRedemptionResult__c.field-meta.xml
<CustomField>
    <fullName>NonDeliveryRedemptionResult__c</fullName>
    <label>Non Delivery Redemption Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>Fail Expire</fullName>
            </value>
            <value>
                <fullName>Fail Redeem Duplicate</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
                <isActive>false</isActive>
                <label>In Process</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>