force-app/main/default/objects/ChannelResponse__c/fields/NSE_Id__c.field-meta.xml
<CustomField>
    <fullName>NSE_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NSE Id</label>
    <referenceTo>AbbottPartner__c</referenceTo>
    <relationshipLabel>Channel Responses (NSE Id)</relationshipLabel>
    <relationshipName>Channel_Responses_NSE</relationshipName>
    <type>Lookup</type>
</CustomField>